examples/test/testpolicy16037.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16037
  namespace: namespace328
spec:
  podSelector:
    matchLabels:
      key49: value8
      key17: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value3
          key25: value43
      podSelector:
        matchLabels:
          key43: value4
